--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entrega-final--backend1--eunice-hernadez-ochoa",
+  "name": "entrega-final--backend1--eunice-hernandez-ochoa",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -9,7 +9,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "nodemon": "^3.1.3"
   },
@@ -19,5 +18,6 @@
     "mongoose": "^8.5.1",
     "mongoose-paginate-v2": "^1.8.2",
     "socket.io": "^4.7.5"
-  }
+  },
+  "description": ""
 }
